--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Vancouver Exam Anxiety Relief</title>
-
+    <link rel="icon" type="image/png" href="./favicon.png">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130646983-1"></script>
     <script>
