--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Contact Me</h2>
-            <!-- <h3 class="section-subheading text-muted">Schedule a session now</h3> -->
+            <h4 class="section-subheader" style="color:#fff">Email your contact info with your preferred day and time to book a session.</h4>
           </div>
         </div>
         <div class="row">
