--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="./img/socialimage.jpg" />
     <meta name="author" content="">
 
-    <title>Vancouver Exam Anxiety Relief</title>
+    <title>Vancouver Exam Anxiety Relief - Approach Consulting</title>
     <link rel="icon" type="image/png" href="./favicon.png">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130646983-1"></script>
