--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
               </div>
               <div class="about-col" style="text-align:right;">
-                <img style="width:80%" src="./img/headshot.jpg" />
+                <img style="width:80%;box-shadow: 0px 0px 16px rgba(131, 131, 131, 0.17);" src="./img/headshot.jpg" />
               </div>
             </div>
 
