--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Contact Me</h2>
+            <h4 class="section-subheader" style="color:#fff">Available Monday to Friday from 5pm to 7pm, and Saturday & Sunday from 10am to 4pm. Each session is $200.</h4>
             <h4 class="section-subheader" style="color:#fff">Email your contact info with your preferred day and time to book a session.</h4>
           </div>
         </div>
