--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               Just like last time…
             </p>
             <p class="text-muted">
-              You’re not alone. I know exactly how that feels - in fact, I’ve experienced it myself on more than one occasion. I also see it all the time when students wonder how to cure their test anxiety.
+              You’re not alone. I know exactly how that feels - in fact, I’ve experienced it myself on more than one occasion. I also see it all the time when students wonder how to improve their test anxiety.
             </p>
 
             <h3 class="section-subheader text-center text-uppercase">That’s where hypnotherapy comes in.</h3>
@@ -164,7 +164,7 @@
             <div style="display:flex;">
               <div class="about-col">
                 <p class="text-muted">Your certified hypnotherapist and former university student, who quit school soon after I had a debilitating experience with an anxiety-inducing exam. </p>
-                <p class="text-muted">I knew I had to find a way to cure the test-fueled misery that I experienced (and knew so many others lived with the same thing), which is why I turned to hypnotherapy. I graduated from the Coastal Academy of Hypnotic Arts and Science, which trained me in this life-changing technique and gave me dozens of tools to help you find relief.</p>
+                <p class="text-muted">I knew I had to find a way to improve the test-fueled misery that I experienced (and knew so many others lived with the same thing), which is why I turned to hypnotherapy. I graduated from the Coastal Academy of Hypnotic Arts and Science, which trained me in this life-changing technique and gave me dozens of tools to help you find relief.</p>
                 <p class="text-muted">(P.S. I’m also a gamer. Fortnite, anyone?)</p>
 
               </div>
